# barrett-ros-pkg

./: README.md  build.sh  cmds-7dof-cycle.sh
barrett_hand_node/: CMakeLists.txt  package.xml
barrett_hand_node/launch/: barrett_hand_node.launch
barrett_hand_node/src/: barrett_hand_node.cpp
perception_palm/: CMakeLists.txt  package.xml
perception_palm/include/: palm_mcp.h
perception_palm/include/MCP2210-Library/: ir_calibrate.cpp  ir_calibration.txt  mcp2210.cpp  ppalm_driver.cpp  ppalm_driver.h
perception_palm/include/MCP2210-Library/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml
perception_palm/launch/: palm_mono.rviz  palm_stereo.rviz  perception_palm.launch
perception_palm/src/: palm_mcp.cpp
wam_bringup/: CMakeLists.txt  LICENSE  package.xml
wam_bringup/include/wam_bringup/: arm_linking.h  arm_linking_ROS.h  arm_linking_UDP.h  bhand.h  bhand_node.h  impedence_controller.h  orientation_controller_variable_gains.h  utilities.h  visual_path_with_normals.h  wam_bringup.h  wam_node.h  wam_node_original.h  wam_node_teleop.h
wam_bringup/launch/: setup_can1.sh  wam_bringup.launch  wam_bringup_hapticwrist.launch  wam_bringup_slax.launch  wam_bringup_teleop_setup.launch
wam_bringup/launch/config/: README.txt  wam4.conf
wam_bringup/launch/haptic_wrist_config/: wam3.conf  wam4.conf
wam_bringup/launch/haptic_wrist_config/calibration_data/wam4/: gravitycal.conf
wam_bringup/launch/nohand_config/: default_can0.conf  default_can1.conf
wam_bringup/scripts/: DataCollectionFriction.py
wam_bringup/src/: bhand_node.cpp  cartesian_velocity_control.cpp  wam_bringup.cpp  wam_node.cpp  wam_node_original.cpp  wam_node_teleop.cpp
wam_demos/: CMakeLists.txt  package.xml
wam_demos/src/: play.cpp  teach.cpp  teach.h
wam_msgs/: CMakeLists.txt  package.xml
wam_msgs/msg/: FtTorques.msg  RTCartForce.msg  RTOrtn.msg  RTToolInfo.msg  RTVelocity.msg  tactilePressure.msg  tactilePressureArray.msg
wam_msgs/msg/.svn/: entries
wam_node/: CMakeLists.txt  package.xml
wam_node/include/wam_bringup/: arm_linking.h  arm_linking_old.h  bhand.h  cartesian_velocity_control.h  impedence_controller.h  orientation_controller_variable_gains.h  path_normals_to_quaternion.h  tangential_velocity.h  tool_force_application.h  utilities.h  visual_path_with_normals.h  wam_bringup.h  wam_node.h  wam_node_original.h
wam_node/launch/: setup_can0.sh  wam_bringup.launch  wam_bringup_dual.launch  wam_bringup_nohand.launch  wam_bringup_slax.launch
wam_node/launch/config/: wam7w.conf
wam_node/launch/config/calibration_data/wam4/: gravitycal.conf  gravitycal.conf.hapticWrist
wam_node/launch/config/calibration_data/wam7w/: gravitycal.conf  gravitycal.conf.1
wam_node/launch/nohand_config/calibration_data/wam7w/: gravitycal.conf  gravitycal.conf.1
wam_node/src/: wam_node.cpp
wam_srvs/: CMakeLists.txt  package.xml  setup.py
wam_srvs/srv/: CP_ImpedanceControl.srv  Connect.srv  ContactControlTeleop.srv  ForceTorque.srv  ForceTorqueBase.srv  ForceTorqueTool.srv  ForceTorqueToolTime.srv  GetToolPose.srv  GridTest.srv  GridTestCalib.srv  HapticSphere.srv  HoldGains.srv  JP_PID.srv  JointMoveBlock.srv  OrtnGains.srv  PID.srv  TP_PID.srv
wam_srvs/srv/.svn/: all-wcprops  entries
wam_teleop/: CMakeLists.txt  package.xml
