<?xml version="1.0"?>
<package>
  <name>perception_palm</name>
  <version>0.0.0</version>
  <description>The Ros drivers for Barrett's Perception Palm</description>

  <maintainer email="hm@barrett.com">robot</maintainer>
  <license>BSD</license>

  <url type="website">http://barrett.com/robot/products.htm</url>
  <author email="hm@barrett.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>wam_msgs</build_depend>
  <build_depend>wam_srvs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>wam_msgs</run_depend>
  <run_depend>wam_srvs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
