<?xml version="1.0"?>
<package>
  
  <name>wam_bringup</name>
  <version>0.1.0</version>
  <description>The wam_bringup package</description>
  <maintainer email="laurapetrich@ualberta.ca">laura</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>wam_msgs</build_depend>
  <build_depend>wam_srvs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>wam_msgs</run_depend>
  <run_depend>wam_srvs</run_depend>

</package>
