<?xml version="1.0"?>
<package format="2">
  <name>wam_node</name>
  <version>0.0.0</version>
  <description>The wam_node package</description>
  <maintainer email="support@barrett.com">Barrett Technology Inc.</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>wam_msgs</build_depend>
  <build_depend>wam_srvs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>wam_msgs</exec_depend>
  <exec_depend>wam_srvs</exec_depend>
  <export>

  </export>
</package>
